--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PayArc",
+  "name": "payarc",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.3.1",
+    "next": "14.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.3",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "react-dom": "18.2.0"
   }
 }
