--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "dependencies": {
     "next": "14.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "ethers": "^6.11.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.5.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24"
   }
 }
